Mejoras generales: -Mejorado el boton de back fisico para que regrese a la categoria anterior (puede configurarse para que vaya hasta el home directamente). Si se encuentra en home entonces sale de la aplicacion (puede configurarse un mensaje antes de salir para asegurarse que es lo que se quiere) -Se agrego un splash para la aplicacion (falta diseño, se esta usando uno generico) -Se elimino la propiedad de debug del manifest ya que el debug necesario no es de codigo nativo sino de codigo web, se desactivo para que no se olvide cambiar esto al momento de hacer el build final

--- a/prototipo/Fanaticos412/platforms/android/res/xml/config.xml
+++ b/prototipo/Fanaticos412/platforms/android/res/xml/config.xml
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="io.cordova.helloCordova" version="2.0.0" xmlns="http://www.w3.org/ns/widgets">
-    <name>Hello Cordova</name>
+<widget id="com.hecticus.Fanaticos412" version="2.0.0" xmlns="http://www.w3.org/ns/widgets">
+    <name>Fanaticos412</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        Fanaticos 412 portal app
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="contact@hecticus.com" href="http://www.hecticus.com">
+        Hecticus Software Inc.
     </author>
     <content src="index.html" />
     <feature name="App">
@@ -43,5 +43,8 @@
     </feature>
     <feature name="VideoPlayer">
         <param name="android-package" value="org.apache.cordova.videoplayer.VideoPlayer" />
+    </feature>
+    <feature name="SplashScreen">
+        <param name="SplashScreen" value="org.apache.cordova.SplashScreen"/>
     </feature>
 </widget>
