--- a/prototipo/NoticiasTVN/platforms/android/res/xml/config.xml
+++ b/prototipo/NoticiasTVN/platforms/android/res/xml/config.xml
@@ -96,4 +96,7 @@
     <gap:splash gap:platform="ios" height="768" src="res/screen/ios/screen-ipad-landscape.png" width="1024" />
     <gap:splash gap:platform="winphone" src="res/screen/windows-phone/screen-portrait.jpg" />
     <content src="index_tvn.html" />
+    <feature name="PushPlugin">
+        <param name="android-package" value="com.plugin.gcm.PushPlugin" />
+    </feature>
 </widget>
