Arreglos al share para android de NoticiasTVN

--- a/NoticiasTVN/NoticiasTVN/platforms/android/res/xml/config.xml
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/res/xml/config.xml
@@ -15,9 +15,6 @@
     <feature name="LocalStorage">
         <param name="ios-package" value="CDVLocalStorage" />
     </feature>
-    <feature name="SocialSharing">
-        <param name="ios-package" value="SocialSharing" />
-    </feature>
     <feature name="SplashScreen">
         <param name="ios-package" value="SplashScreen" />
     </feature>
@@ -101,5 +98,8 @@
     </feature>
     <feature name="Device">
         <param name="android-package" value="org.apache.cordova.device.Device" />
+    </feature>
+    <feature name="SocialSharing">
+        <param name="android-package" value="nl.xservices.plugins.SocialSharing" />
     </feature>
 </widget>
