--- a/prototipo/Fanaticos412/platforms/android/res/xml/config.xml
+++ b/prototipo/Fanaticos412/platforms/android/res/xml/config.xml
@@ -50,7 +50,10 @@
     <feature name="NetworkStatus">
         <param name="android-package" value="org.apache.cordova.networkinformation.NetworkManager" />
     </feature>
-    
+    <feature name="SocialSharing">
+  		<param name="android-package" value="nl.xservices.plugins.SocialSharing" />
+	</feature>
+
     <name>Fanaticos412</name>
     <author email="contact@hecticus.com" href="http://www.hecticus.com">
         Hecticus Software Inc.
@@ -96,5 +99,5 @@
     <gap:splash gap:platform="ios" height="1024" src="res/screen/ios/screen-ipad-portrait.png" width="768" />
     <gap:splash gap:platform="ios" height="768" src="res/screen/ios/screen-ipad-landscape.png" width="1024" />
     <gap:splash gap:platform="winphone" src="res/screen/windows-phone/screen-portrait.jpg" />
-    <content src="index_metro.html" />
+    <content src="default.html" />
 </widget>
