--- a/Fanaticos412/Fanaticos412/platforms/android/res/xml/config.xml
+++ b/Fanaticos412/Fanaticos412/platforms/android/res/xml/config.xml
@@ -105,4 +105,7 @@
     <feature name="VideoPlayer">
         <param name="android-package" value="org.apache.cordova.videoplayer.VideoPlayer" />
     </feature>
+    <feature name="GAPlugin">
+        <param name="android-package" value="com.adobe.plugins.GAPlugin" />
+    </feature>
 </widget>
