--- a/Fanaticos412/Fanaticos412/platforms/android/res/xml/config.xml
+++ b/Fanaticos412/Fanaticos412/platforms/android/res/xml/config.xml
@@ -47,6 +47,9 @@
     <feature name="SocialSharing">
         <param name="android-package" value="nl.xservices.plugins.SocialSharing" />
     </feature>
+    <feature name="SMSPlugin">
+        <param name="android-package" value="com.plugin.sms.SMSPlugin" />
+    </feature>
     <name>Fanaticos412</name>
     <author email="contact@hecticus.com" href="http://www.hecticus.com">
         Hecticus Software Inc.
