--- a/NoticiasTVN/NoticiasTVN/platforms/ios/www/css/base.css
+++ b/NoticiasTVN/NoticiasTVN/platforms/ios/www/css/base.css
@@ -19,7 +19,7 @@
 	    -webkit-touch-callout:none;		/* prevent callout to copy image, etc when tap to hold */
 	    -webkit-text-size-adjust:none;		/* prevent webkit from resizing text to fit */
 	    -webkit-user-select:none;          /* prevent copy paste, to allow, change 'none' to 'text' */
-	    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+	    font-family:Helvetica, Arial, sans-serif;
 	    font-size:1em;
 	    height:100%;
 	    margin:0px;
