--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/index.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/index.scala.html
@@ -7,7 +7,7 @@
     </p>
     
     <p>
-        <a class="btn" href="@controllers.tvn.routes.Application.list()">Ir »</a>
+        <a class="btn" href="@controllers.routes.Tvn.list()">Ir »</a>
     </p>
     
     <h2>Crear una Categoría</h2>
@@ -17,7 +17,7 @@
     </p>
     
     <p>
-        <a class="btn" href="@controllers.tvn.routes.Application.blank()">Ir »</a>
+        <a class="btn" href="@controllers.routes.Tvn.blank()">Ir »</a>
     </p>
     
 }
