--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/list.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/list.scala.html
@@ -22,7 +22,7 @@
     }
     
     // Generate the link
-    controllers.tvn.routes.Application.list(newPage, sortBy, order, currentFilter)
+    controllers.routes.Tvn.list(newPage, sortBy, order, currentFilter)
     
 }
 
@@ -56,7 +56,7 @@
         <form action="@link(0, "name")" method="GET">
             <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by category name...">
             <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
-            <a class="btn success" id="add" href="@controllers.tvn.routes.Application.blank">Add a new category</a>
+            <a class="btn success" id="add" href="@controllers.routes.Tvn.blank">Add a new category</a>
         </form>
     </div>
     
@@ -80,7 +80,7 @@
 
                 @for(category <- currentPage.getList) {
                     <tr data-id="@category.idCategory">
-                        <td><a href="@controllers.tvn.routes.Application.edit(category.idCategory)">@category.name</a></td>
+                        <td><a href="@controllers.routes.Tvn.edit(category.idCategory)">@category.name</a></td>
                         <td>@category.feedUrl</td>
                         <td>
                             @if(category.pushable) {
