--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/sort.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/sort.scala.html
@@ -17,8 +17,8 @@
     </div>
 
     <div id="actions">
-    	<a class="btn success" id="add" href="@controllers.tvn.routes.Application.blank">Add a new category</a>
-		<a class="btn success" id="ajax" href="@controllers.tvn.routes.Application.blank">Sort</a>
+    	<a class="btn success" id="add" href="@controllers.routes.Tvn.blank">Add a new category</a>
+		<a class="btn success" id="ajax" href="#">Apply</a>
     </div>
     
     @if(currentPage.getTotalRowCount == 0) {
