Actualizaciones varias de l&f

--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/main.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/main.scala.html
@@ -90,8 +90,14 @@
                 
                 <div class="page-header">
                     <!--h1>@title</h1-->
-                    <img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 250px; height:69px" >
-                    <img src="@routes.Assets.at("images/logo-tvn.png")" style="width: 250px; height:69px" >
+                    <!--img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 250px; height:69px" >
+                    <img src="@routes.Assets.at("images/logo-tvn.png")" style="width: 250px; height:69px" -->
+                    
+                    <img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 15%; height:auto;" />
+           			<img src="@routes.Assets.at("images/logo-apple-store.png")" style="width:5%; height:auto;" />
+            		<img src="@routes.Assets.at("images/logo-google-play.png")" style="width:20%; height:auto;" />        	            	
+            		<img src="@routes.Assets.at("images/logo-tvn.png")" style="width:15%; height:auto;" />
+                    
                 </div>
 
                 <div class="row">
@@ -102,7 +108,7 @@
                 
             </div>
 
-            <footer>
+            <footer>				
                 <p>
                     <a href="http://www.hecticus.com">www.hecticus.com</a>
                 </p>
