--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -5,13 +5,71 @@
 <html>
     <head>
         <title>@title</title>
+        
+        <meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    	<meta name="description" content="@title">
+    	<meta name="author" content="Hecticus Software, Inc.">
+    	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        
         <script src="@controllers.routes.Application.jsRoutes()" type="text/javascript"></script>
         <script src="@routes.Application.javascriptRoutes" type="text/javascript"></script>
+        
+        <style>
+        	body{font-family: Arial, Helvetica, sans-serif;}
+        	
+			figcaption{font-size: x-small; font-weight: bold; z-index: 1500;}
+			
+			
+			img.flag {width:50%; height:25%; }
+			img.flag:hover {cursor:pointer; opacity:1.0; filter:alpha(opacity=100); /* For IE8 and earlier */}															
+			.off{opacity:0.4; filter:alpha(opacity=40);}
+			.on{opacity:1.0; filter:alpha(opacity=100);}
+			img.arrow{width:100%; height:auto; }
+			
+			
+        </style>
+        
+		<script>
+	  		$(function() {
+				
+				$(document).on('click','.flag', function() {
+					
+					var selector  = 'img[data-game="'+$(this).data('game')+'"][data-team="'+$(this).data('team')+'"]';
+					var selectorteama  = 'img[data-game="'+$(this).data('game')+'"][data-team="a"]';
+					var selectorteamb  = 'img[data-game="'+$(this).data('game')+'"][data-team="b"]';
+					var selectorscore  = '.score[data-game="'+$(this).data('game')+'"]';
+							
+					if ($(this).hasClass('on')) {						
+						$(selector).removeClass('on');
+					} else {
+						$(selector).addClass('on');	
+					}
+
+					if ($(selectorteama).hasClass('on') && $(selectorteamb).hasClass('on')) {
+						$(selectorscore).html('EMPATE');	
+					} else if ($(selectorteama).hasClass('on') || $(selectorteamb).hasClass('on')) {
+						$(selectorscore).html('GANADOR');	
+					} else {
+						$(selectorscore).html('SELECCIONE');
+					}
+
+
+
+				});		
+
+	  		});
+	  		
+  		</script>
+        
     </head>
     <body>
-        @content
+		@content
     </body>
 </html>
