Avance de la vista asociada a la primera fase

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -28,7 +28,7 @@
 		
 		<div class="row">
 			
-			<div class="col-xs-6 col-md-4" style="background-color:#eaeaee; padding:5px; text-align: center;">
+			<div class="col-xs-12 col-sm-6 col-md-4" style="background-color:#eaeaee; padding:5px; text-align: center;">
 				
 				<div class="row" style="text-align: center; padding:5px">
 					
@@ -43,17 +43,15 @@
 							</td>
 							<td style="width:33%; height: auto; text-align: center;">
 								
-								<div >
+								<div>
 									<div style="width:15%; height: auto; float:left;" ><img data-game="1" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
-									<div style="width:70%; height: auto; float:left;"><h5 data-game="1" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>
-									
+									<div style="width:70%; height: auto; float:left;"><h5 data-game="1" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
 									<div style="width:15%; height: auto; float:left;"><img data-game="1" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
-									
-								
 								</div>
 								
 																				
-								<!--img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" /-->								
+								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
+																
 							</td>
 							<td style="width:33%; height: auto;">
 								<figure>
@@ -64,142 +62,121 @@
 						</tr>
 					</table>
 					
-					<!--div class="col-xs-4 col-sm-4 col-md-4">
-						<figure>
-							<img data-game="1" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
-							<figcaption>BRA</figcaption>
-						</figure>
-					</div>
-				
-				
-					<div class="col-xs-4 col-sm-4 col-md-4">
-																	
-						<img data-game="1" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" />
-						<h5 data-game="1" class="score" style="display: inline; font-size: x-small;">SELECCIONE</h5>
-						<img data-game="1" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" />												
-						<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
-					
-					</div>
-										
-					<div class="col-xs-4 col-sm-4 col-md-4">		
-						<figure>
-							<img data-game="1" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/hr-lgflag.png")" alt="Croacia" />
-							<figcaption>CRC</figcaption>
-						</figure>						
-					</div-->
-					
-				</div>
-				
-				<!--img src="@routes.Assets.at("images/line.png")" alt="line" style="width:75%; height:1px;" />
-				
-				<div class="row"  style="text-align: center; padding:5px ">
-					
-					<div class="col-xs-4 col-sm-4 col-md-4">
-						<figure>
-							<img class="flag off" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
-							<figcaption>MEX</figcaption>
-						</figure>
-					</div>
-					
-					<div class="col-xs-4 col-sm-4 col-md-4">											
-						<img class="arrow off" src="@routes.Assets.at("images/left.png")" />
-						<h5 style="display: inline; font-size: x-small; margin: 0 10px;">GANADOR</h5>
-						<img class="arrow off" src="@routes.Assets.at("images/right.png")" />						
-						<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
-						<h5 style="display: inline; font-size: x-small; margin: 0;">EMPATE</h5>
-					</div>
-										
-					<div class="col-xs-4 col-sm-4 col-md-4">	
-						<figure>
-							<img class="flag off" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
-							<figcaption>CAM</figcaption>
-						</figure>						
-					</div>
-					
-				</div-->
-				
-
-			</div>
-			<!--div class="col-xs-6 col-md-4" style="background-color:#e2e2e3; padding:10px">
-				
-				<div class="row"  style="text-align: center; padding:10px">
-					
-					<div class="col-xs-6 col-sm-6 col-md-6">
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
-							<figcaption>Brasil</figcaption>
-						</figure>
-					</div>
-						
-					<div class="col-xs-6 col-sm-6 col-md-6">	
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
-							<figcaption>México</figcaption>
-						</figure>
-					</div>
-					
-				</div>
-				
-				
-				<div class="row"  style="text-align: center; padding:10px">
-					
-					<div class="col-xs-6 col-sm-6 col-md-6">		
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
-							<figcaption>Camerún</figcaption>
-						</figure>						
-					</div>
-					
-					<div class="col-xs-6 col-sm-6 col-md-6">		
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/hr-lgflag.png")" alt="Croacia" />
-							<figcaption>Croacia</figcaption>
-						</figure>						
-					</div>
 					
 				</div>
 
+				<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:75%; height:1px;" />
+
+				<div class="row" style="text-align: center; padding:5px">
+					
+					<table>
+						<tr>
+							<td style="width:33%; height: auto;" >
+							
+								<figure>
+									<img data-game="2" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
+									<figcaption>MEX</figcaption>
+								</figure>
+							</td>
+							<td style="width:33%; height: auto; text-align: center;">
+								
+								<div>
+									<div style="width:15%; height: auto; float:left;" ><img data-game="2" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
+									<div style="width:70%; height: auto; float:left;"><h5 data-game="2" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
+									<div style="width:15%; height: auto; float:left;"><img data-game="2" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
+								</div>
+								
+																				
+								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
+																
+							</td>
+							<td style="width:33%; height: auto;">
+								<figure>
+									<img data-game="2" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Croacia" />
+									<figcaption>CMR</figcaption>
+								</figure>
+							</td>
+						</tr>
+					</table>
+
+				</div>
+
 			</div>
-			<div class="col-xs-12 col-md-4" style="background-color:#eaeaee; padding:10px">
-				
-				<div class="row"  style="text-align: center; padding:10px ">
+			<div class="col-xs-12 col-sm-6 col-md-4" style="background-color:#eaeaee; padding:5px; text-align: center;">
+				<div class="row" style="text-align: center; padding:5px">
 					
-					<div class="col-xs-6 col-sm-6 col-md-6">		
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
-							<figcaption>Camerún</figcaption>
-						</figure>						
-					</div>
-						
-					<div class="col-xs-6 col-sm-6 col-md-6">	
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
-							<figcaption>Brasil</figcaption>
-						</figure>
-					</div>
+					<table>
+						<tr>
+							<td style="width:33%; height: auto;" >
+							
+								<figure>
+									<img data-game="17" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
+									<figcaption>BRA</figcaption>
+								</figure>
+							</td>
+							<td style="width:33%; height: auto; text-align: center;">
+								
+								<div>
+									<div style="width:15%; height: auto; float:left;" ><img data-game="17" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
+									<div style="width:70%; height: auto; float:left;"><h5 data-game="17" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
+									<div style="width:15%; height: auto; float:left;"><img data-game="17" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
+								</div>
+								
+																				
+								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
+																
+							</td>
+							<td style="width:33%; height: auto;">
+								<figure>
+									<img data-game="17" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
+									<figcaption>MEX</figcaption>
+								</figure>
+							</td>
+						</tr>
+					</table>
 					
-				</div>
-				
-				
-				<div class="row"  style="text-align: center; padding:10px ">
-					
-					<div class="col-xs-6 col-sm-6 col-md-6">	
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/hr-lgflag.png")" alt="Croacia" />
-							<figcaption>Croacia</figcaption>
-						</figure>						
-					</div>
-					
-					<div class="col-xs-6 col-sm-6 col-md-6">	
-						<figure>
-							<img class="flag" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
-							<figcaption>México</figcaption>
-						</figure>
-					</div>
 					
 				</div>
 				
-			</div-->
+				<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:75%; height:1px;" />
+
+				<div class="row" style="text-align: center; padding:5px">
+					
+					<table>
+						<tr>
+							<td style="width:33%; height: auto;" >
+							
+								<figure>
+									<img data-game="18" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
+									<figcaption>CMR</figcaption>
+								</figure>
+							</td>
+							<td style="width:33%; height: auto; text-align: center;">
+								
+								<div>
+									<div style="width:15%; height: auto; float:left;" ><img data-game="18" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
+									<div style="width:70%; height: auto; float:left;"><h5 data-game="18" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
+									<div style="width:15%; height: auto; float:left;"><img data-game="18" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
+								</div>
+								
+																				
+								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
+																
+							</td>
+							<td style="width:33%; height: auto;">
+								<figure>
+									<img data-game="18" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/hr-lgflag.png")" alt="Croacia" />
+									<figcaption>CRC</figcaption>
+								</figure>
+							</td>
+						</tr>
+					</table>
+
+				</div>
+				
+			</div>
+			
+			
 		</div>
 		
 		
