--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -1,202 +1,90 @@
-@(phase: String, persons: List[Person])
+@(phase: models.matches.Phase)
+
+
 
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
-    
-    @*********************
-	* @play20.welcome(phase, style = "Java")
-	*********************@
-	
-	<!--h1>@phase</h1>
 
-	<ul>
-	@for(person <- persons) {
-	  <li id="@person.id">@person.name</li>
-	}
-	</ul-->
-	
-	
+
 	<div class="container">
-		
-		<div class="row">
-			<div class="col-md-12" style="background-color:#173069; color:#FFFFFF; font-weight: bold;">Predicción Grupo B</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-xs-12 col-md-6" style="background-color:#3c4d80; color:#FFFFFF; font-weight: bold; text-align: left">Grupo A</div>
-			<div class="col-xs-12 col-md-6" style="background-color:#3c4d80; color:#FFFFFF; font-weight: bold; text-align: right;">Grupo C</div>
-		</div>
-		
-		<div class="row">
-			
-			<div class="col-xs-12 col-sm-6 col-md-4" style="background-color:#eaeaee; padding:5px; text-align: center;">
 				
-				<div class="row" style="text-align: center; padding:5px">
-					
-					<table>
-						<tr>
-							<td style="width:33%; height: auto;" >
-							
-								<figure>
-									<img data-game="1" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
-									<figcaption>BRA</figcaption>
-								</figure>
-							</td>
-							<td style="width:33%; height: auto; text-align: center;">
-								
-								<div>
-									<div style="width:15%; height: auto; float:left;" ><img data-game="1" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
-									<div style="width:70%; height: auto; float:left;"><h5 data-game="1" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
-									<div style="width:15%; height: auto; float:left;"><img data-game="1" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
-								</div>
-								
-																				
-								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
-																
-							</td>
-							<td style="width:33%; height: auto;">
-								<figure>
-									<img data-game="1" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/hr-lgflag.png")" alt="Croacia" />
-									<figcaption>CRC</figcaption>
-								</figure>
-							</td>
-						</tr>
-					</table>
-					
-					
-				</div>
-
-				<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:75%; height:1px;" />
-
-				<div class="row" style="text-align: center; padding:5px">
-					
-					<table>
-						<tr>
-							<td style="width:33%; height: auto;" >
-							
-								<figure>
-									<img data-game="2" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
-									<figcaption>MEX</figcaption>
-								</figure>
-							</td>
-							<td style="width:33%; height: auto; text-align: center;">
-								
-								<div>
-									<div style="width:15%; height: auto; float:left;" ><img data-game="2" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
-									<div style="width:70%; height: auto; float:left;"><h5 data-game="2" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
-									<div style="width:15%; height: auto; float:left;"><img data-game="2" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
-								</div>
-								
-																				
-								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
-																
-							</td>
-							<td style="width:33%; height: auto;">
-								<figure>
-									<img data-game="2" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Croacia" />
-									<figcaption>CMR</figcaption>
-								</figure>
-							</td>
-						</tr>
-					</table>
-
-				</div>
-
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4" style="background-color:#eaeaee; padding:5px; text-align: center;">
-				<div class="row" style="text-align: center; padding:5px">
-					
-					<table>
-						<tr>
-							<td style="width:33%; height: auto;" >
-							
-								<figure>
-									<img data-game="17" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
-									<figcaption>BRA</figcaption>
-								</figure>
-							</td>
-							<td style="width:33%; height: auto; text-align: center;">
-								
-								<div>
-									<div style="width:15%; height: auto; float:left;" ><img data-game="17" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
-									<div style="width:70%; height: auto; float:left;"><h5 data-game="17" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
-									<div style="width:15%; height: auto; float:left;"><img data-game="17" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
-								</div>
-								
-																				
-								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
-																
-							</td>
-							<td style="width:33%; height: auto;">
-								<figure>
-									<img data-game="17" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/mx-lgflag.png")" alt="México" />
-									<figcaption>MEX</figcaption>
-								</figure>
-							</td>
-						</tr>
-					</table>
-					
-					
-				</div>
-				
-				<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:75%; height:1px;" />
-
-				<div class="row" style="text-align: center; padding:5px">
-					
-					<table>
-						<tr>
-							<td style="width:33%; height: auto;" >
-							
-								<figure>
-									<img data-game="18" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
-									<figcaption>CMR</figcaption>
-								</figure>
-							</td>
-							<td style="width:33%; height: auto; text-align: center;">
-								
-								<div>
-									<div style="width:15%; height: auto; float:left;" ><img data-game="18" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
-									<div style="width:70%; height: auto; float:left;"><h5 data-game="18" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
-									<div style="width:15%; height: auto; float:left;"><img data-game="18" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
-								</div>
-								
-																				
-								<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
-																
-							</td>
-							<td style="width:33%; height: auto;">
-								<figure>
-									<img data-game="18" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/hr-lgflag.png")" alt="Croacia" />
-									<figcaption>CRC</figcaption>
-								</figure>
-							</td>
-						</tr>
-					</table>
-
-				</div>
-				
+			  
+	    <div class="row">						
+			<div class="col-md-6" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: left;">Predicción Grupo <span class="name-group">A</span> - <span class="completed-group">0</span>% Completado</div>
+			<div class="col-md-6" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: right;">Grupos 
+				@for(group <- phase.getMatchGroup()) {
+					 <span data-group="@group.getIdGroup()" class="menu @("on".when(group.getIdGroup() == 1))" >@group.getName()</span>
+				}
 			</div>
 			
-			
 		</div>
 		
-		
-		
-		
+		@for(group <- phase.getMatchGroup()) {
+					
+			
+			
+			<div data-group="@group.getIdGroup()" data-completed="0" class="row @("hidden".when(group.getIdGroup() != 1)) group ">
+				
+				
 
+				@for((game, index) <- group.getGameMatch().zipWithIndex) {
 		
+					@if((index%2) == 0) {
+						<div class="col-xs-12 col-sm-4 col-md-4 .col-lg-4" style="background-color:@{if((index == 2) || (index == 3)) "#e2e2e3" else "#eaeaee"}; padding:10px; text-align: center;">
+					}
+		
+					@if((index%2) == 1) {
+						<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:75%; height:1px;" />	
+					}
+					
+					<div class="row" style="text-align: center; padding:5px">
+
+						<table>
+							<tr>
+								<td style="width:33%; height: auto;" >
+								
+									<figure>
+										<img data-group="@group.getIdGroup()" data-game="@game.getIdMatch()" data-team="a" class="flag off" src="@routes.Assets.at("images/flags/" + game.getTeamA().getFlagFile())" alt="@game.getTeamA().getName()" />
+										<figcaption>@game.getTeamA().getShortName()</figcaption>
+									</figure>
+								</td>
+								<td style="width:33%; height: auto; text-align: center;">
+									
+									<div>
+										<div style="width:15%; height: auto; float:left;" ><img data-game="@game.getIdMatch()" data-team="a" class="arrow off" src="@routes.Assets.at("images/left.png")" /></div>
+										<div style="width:70%; height: auto; float:left;"><h5 data-game="@game.getIdMatch()" class="score" style="display:inline; font-size: x-small; ">SELECCIONE</h5></div>									
+										<div style="width:15%; height: auto; float:left;"><img data-game="@game.getIdMatch()" data-team="b" class="arrow off" src="@routes.Assets.at("images/right.png")" /></div>
+									</div>
+												
+									<img src="@routes.Assets.at("images/line.png")" alt="line" style="width:100%; height:1px;" />
+																	
+								</td>
+								<td style="width:33%; height: auto;">
+									<figure>
+										<img data-group="@group.getIdGroup()" data-game="@game.getIdMatch()" data-team="b" class="flag off" src="@routes.Assets.at("images/flags/" + game.getTeamB().getFlagFile())" alt="@game.getTeamB().getName()" />
+										<figcaption>@game.getTeamB().getShortName()</figcaption>
+									</figure>
+								</td>
+							</tr>
+						</table>
+
+					</div>
+					
+					<div class="row" data-game="@game.getIdMatch()" class="score" style="font-size: x-small; font-weight: bold; padding: 5px; background-color: #ffffff; width:50%; margin: 0 auto;" >							
+						@game.getDate().toString().substring(6, 8)/@game.getDate().toString().substring(4, 6) @game.getDate().toString().substring(8, 10):@game.getDate().toString().substring(11, 13)/@game.getVenue().getName()
+					</div>
+				
+					@if((index%2) == 1) {
+						</div>
+					}
+					
+				}
+			</div>
+		}
+
 		<div class="row">
 			<div class="col-md-12" style="background-color:#173069; color:#FFFFFF; font-weight: bold;">Predicción por Grupos</div>
 		</div>
-		
-		
-		
-		
+
 	</div>
 
-
-	<!--img src="@routes.Assets.at("images/flags/ag-lgflag.png")" alt="Argelia" class="img-rounded" />
-	<img src="@routes.Assets.at("images/flags/ar-lgflag.png")" alt="Argentina" class="img-rounded" />
-	<img src="@routes.Assets.at("images/flags/as-lgflag.png")" alt="Australia" class="img-rounded" /-->
-
-	
 }
