--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -14,6 +14,7 @@
     	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
@@ -31,8 +32,13 @@
 			img.flag:hover {cursor:pointer; opacity:1.0; filter:alpha(opacity=100); /* For IE8 and earlier */}															
 			.off{opacity:0.4; filter:alpha(opacity=40);}
 			.on{opacity:1.0; filter:alpha(opacity=100);}
-			img.arrow{width:100%; height:auto; }
+			img.arrow{width:60%; height:auto; }
 			
+			.menu{cursor:pointer; }
+			.menu:hover{color:#ffe85c}
+			.menu.on{color:#ffe85c}
+			
+			.hidden {visibility:hidden;}
 			
         </style>
         
@@ -45,24 +51,51 @@
 					var selectorteama  = 'img[data-game="'+$(this).data('game')+'"][data-team="a"]';
 					var selectorteamb  = 'img[data-game="'+$(this).data('game')+'"][data-team="b"]';
 					var selectorscore  = '.score[data-game="'+$(this).data('game')+'"]';
+					var selectorgroup  = 'div[data-group="'+$(this).data('group')+'"]';		
+					var completed = $(selectorgroup).attr('data-completed');
+							
+							
 							
 					if ($(this).hasClass('on')) {						
 						$(selector).removeClass('on');
 					} else {
 						$(selector).addClass('on');	
 					}
+					
+
+					
 
 					if ($(selectorteama).hasClass('on') && $(selectorteamb).hasClass('on')) {
-						$(selectorscore).html('EMPATE');	
+
+						$(selectorscore).html('EMPATE');						
+						$(selectorgroup).attr('data-completed',completed);
 					} else if ($(selectorteama).hasClass('on') || $(selectorteamb).hasClass('on')) {
-						$(selectorscore).html('GANADOR');	
-					} else {
+						completed = parseInt(completed)+1;
+						$(selectorscore).html('GANADOR');							
+						$(selectorgroup).attr('data-completed',completed);		
+					} else {						
+						completed = parseInt(completed)-1;
 						$(selectorscore).html('SELECCIONE');
+						$(selectorgroup).attr('data-completed',completed);
 					}
-
-
+				
+					$('.completed-group').html(parseFloat((completed/6)*100).toFixed(2));
 
 				});		
+
+				$(document).on('click','.menu', function() {
+					
+					var selectorgroup  = 'div[data-group="'+$(this).data('group')+'"]';		
+					var completed = $(selectorgroup).attr('data-completed');					
+					$('.completed-group').html(parseFloat((completed/6)*100).toFixed(2));
+					
+					$('.menu').removeClass('on');
+					$(this).addClass('on');	
+					$('.name-group').html($(this).html());
+					$('.group[data-group]').addClass('hidden');
+					$(selectorgroup).removeClass('hidden');
+				});
+
 
 	  		});
 	  		
