--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -9,7 +9,7 @@
 				
 			  
 	    <div class="row">						
-			<div class="col-md-6" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: left;">Predicción Grupo <span class="name-group">A</span> - <span class="completed-group">0</span>% Completado</div>
+			<div class="col-md-6" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: left;">Predicción Grupo <span class="name-group">A</span></div>
 			<div class="col-md-6" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: right;">Grupos 
 				@for(group <- phase.getMatchGroup()) {
 					 <span data-group="@group.getIdGroup()" class="menu @("on".when(group.getIdGroup() == 1))" >@group.getName()</span>
@@ -22,7 +22,7 @@
 					
 			
 			
-			<div data-group="@group.getIdGroup()" data-completed="0" class="row @("hidden".when(group.getIdGroup() != 1)) group ">
+			<div data-group="@group.getIdGroup()"  class="row @("hidden".when(group.getIdGroup() != 1)) group ">
 				
 				
 
@@ -69,8 +69,8 @@
 
 					</div>
 					
-					<div class="row" data-game="@game.getIdMatch()" class="score" style="font-size: x-small; font-weight: bold; padding: 5px; background-color: #ffffff; width:50%; margin: 0 auto;" >							
-						@game.getDate().toString().substring(6, 8)/@game.getDate().toString().substring(4, 6) @game.getDate().toString().substring(8, 10):@game.getDate().toString().substring(11, 13)/@game.getVenue().getName()
+					<div class="row" data-game="@game.getIdMatch()" class="score" style="font-size: x-small; font-weight: bold; padding: 5px; background-color: #ffffff; width:75%; margin: 0 auto;" >							
+						@game.getDate().toString().substring(6, 8)/@game.getDate().toString().substring(4, 6) @game.getDate().toString().substring(8, 10):@game.getDate().toString().substring(11, 13) / @game.getVenue().getName()
 					</div>
 				
 					@if((index%2) == 1) {
@@ -84,6 +84,222 @@
 		<div class="row">
 			<div class="col-md-12" style="background-color:#173069; color:#FFFFFF; font-weight: bold;">Predicción por Grupos</div>
 		</div>
+		<div class="row" >
+			
+			@for((group,index) <- phase.getMatchGroup().zipWithIndex) {
+				
+				@if((index%4) == 0) {
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#e2e2e3;">
+						<div class="row" style=" padding: 5px;">
+							
+					
+				}
+				
+				
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3" style="background: url(@routes.Assets.at("images/arrows/" + group.getName() + ".png")) no-repeat left; center; " >
+						
+							
+						
+						<div style="padding: 0px; margin-left:10px;">
+							
+								<div class="content-flag-score on hidden">
+									<figure>
+										<img class="flag"  src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
+										<figcaption>BRA</figcaption>
+									</figure>	
+								</div>
+								<div class="content-flag-score on hidden">
+									<figure>
+										<img class="flag"  src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
+										<figcaption>CMR</figcaption>
+									</figure>	
+								</div>
+
+								<div class="content-flag-score">1er PUESTO <br /> @group.getName()1</div>	
+								<div class="content-flag-score">2do PUESTO <br /> @group.getName()2</div>
+	
+						</div>
+							
+																
+					</div>
+				
+				
+				@if((index%4) == 3) {
+						</div>
+					</div>
+				}
+				
+			}
+			
+			<!--div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#e2e2e3;">
+				<div class="row" style=" padding: 5px;">
+					
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; background-color:#bababb; text-align: center; ">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<figure>
+											<img class="flag"  src="@routes.Assets.at("images/flags/br-lgflag.png")" alt="Brasil" />
+											<figcaption>BRA</figcaption>
+										</figure>										
+									</div>
+								</div>								
+								<div class="row" style="padding: 5px; margin-top: 5px;  background-color:#bababb;  text-align: center;">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<figure>
+											<img class="flag" src="@routes.Assets.at("images/flags/cm-lgflag.png")" alt="Camerún" />
+											<figcaption>CMR</figcaption>
+										</figure>										
+									</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+					
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">B1</div>
+								</div>								
+								<div class="row" style=" padding: 5px;  margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">B2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+					
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">C1</div>
+								</div>								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">C2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+						
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">D1</div>
+								</div>								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">D2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+										
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#e2e2e3;">			
+				<div class="row" style=" padding: 5px;">
+					
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">E1</div>
+								</div>								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">E2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+					
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">F1</div>
+								</div>								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">F2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+					
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">G1</div>
+								</div>								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">G2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+						
+					<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+						<div class="row" style=" padding: 5px;">
+							
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 arrow-blue" style="padding: 0px;">
+								&nbsp;
+							</div>
+							<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" >								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">H1</div>
+								</div>								
+								<div class="row" style=" padding: 5px; width: 52px; height: 43px; margin-top: 5px; -moz-box-shadow: 3px 3px rgba(0,0,0,0.7); -webkit-box-shadow: 3px 3px rgba(0,0,0,0.7); box-shadow: 3px 3px rgba(0,0,0,0.7);">
+									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="">H2</div>									
+								</div>
+							</div>
+							
+						</div>										
+					</div>
+										
+				</div>
+			</div>	
+		</div>
+		
+		
+
+			
 
 	</div>
 
